--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -1,41 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+
+    <ImageView
+        android:id="@+id/user_icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:backgroundTint="@color/fregBackground"
+        android:src="@mipmap/user_avator" />
+
+    <TextView
+        android:id="@+id/user_showinfo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginVertical="20dp"
+        android:text="用户信息"
+        android:textColor="@color/black" />
 
     <Button
         android:id="@+id/modify_passwordBtn"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="208dp"
+        style="@style/RoundedCornerBtnWithRightArrow"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:text="修改密码"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textColor="@color/black" />
 
     <Button
-        android:id="@+id/logoutBtn"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="50dp"
-        android:text="退出登录"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/modify_passwordBtn" />
+        android:id="@+id/infrom_control"
+        style="@style/RoundedCornerBtnWithRightArrow"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="设置随机题目的数量"
+        android:textColor="@color/black" />
 
     <Button
         android:id="@+id/instrumentBtn"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:text="关于"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/logoutBtn"
-        app:layout_constraintVertical_bias="0.153" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        style="@style/RoundedCornerBtnWithRightArrow"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="关于我们"
+        android:textColor="@color/black" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="bottom">
+
+        <Button
+            android:id="@+id/logoutBtn"
+            style="@style/RoundedCornerBtnWithNoArrow"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:text="退出登录"
+            android:textColor="@color/red" />
+
+    </LinearLayout>
+
+</LinearLayout>
