--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#046C70</color>
+    <color name="colorPrimary">#242240</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="white">#FFFFFF</color>
+    <color name="lightgray">#B5B5B5</color>
+    <color name="gray">#5A5A5A</color>
+    <color name="black">#000</color>
+    <color name="red">#FF0000</color>
+    <color name="fregBackground">#FAFAF7</color>
+    <color name="transparent">#00000000</color>
 </resources>
