--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -12,6 +12,7 @@
         android:layout_marginTop="28dp"
         android:gravity="center"
         android:text="这里是你的历史作答哦"
+        android:textColor="@color/colorPrimary"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
