--- a/app/src/main/res/layout/activity_answer_select.xml
+++ b/app/src/main/res/layout/activity_answer_select.xml
@@ -1,44 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:gravity="center_horizontal"
+    android:orientation="vertical">
 
     <TextView
-        android:id="@+id/title2"
+        android:id="@+id/challenge_title"
         android:layout_width="106dp"
         android:layout_height="46dp"
-        android:layout_marginTop="80dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="20dp"
         android:gravity="center"
         android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/question2"
+        android:id="@+id/challenge_question_content"
         android:layout_width="300dp"
-        android:layout_height="186dp"
+        android:layout_height="150dp"
+        android:layout_gravity="center_horizontal"
         android:layout_marginTop="24dp"
         android:gravity="center"
         android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title2" />
+        android:textStyle="bold" />
 
     <RadioGroup
         android:id="@+id/answerGroup"
         android:layout_width="350dp"
-        android:layout_height="200dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/question2"
-        app:layout_constraintVertical_bias="0.13">
+        android:layout_height="160dp"
+        android:layout_marginVertical="20dp">
 
         <RadioButton
             android:id="@+id/answerA"
@@ -64,11 +57,6 @@
             android:layout_height="40dp"
             android:text="AnswerD" />
 
-        <RadioButton
-            android:id="@+id/answerE"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:text="AnswerE" />
 
     </RadioGroup>
 
@@ -82,17 +70,17 @@
         app:layout_constraintTop_toBottomOf="@+id/answerGroup">
 
         <Button
-            android:id="@+id/next2"
+            android:id="@+id/challenge_next"
             android:layout_width="175dp"
             android:layout_height="50dp"
             android:layout_weight="1"
             android:text="继续" />
 
         <Button
-            android:id="@+id/submit2"
+            android:id="@+id/challenge_submit"
             android:layout_width="175dp"
             android:layout_height="50dp"
             android:text="提交" />
     </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
