--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -33,7 +33,7 @@
         android:textColor="@color/black" />
 
     <Button
-        android:id="@+id/infrom_control"
+        android:id="@+id/set_random_quesnum_btn"
         style="@style/RoundedCornerBtnWithRightArrow"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -50,7 +50,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="377dp"
         android:gravity="bottom">
 
         <Button
@@ -58,6 +58,8 @@
             style="@style/RoundedCornerBtnWithNoArrow"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="130dp"
+            android:textSize="18sp"
             android:layout_centerHorizontal="true"
             android:text="退出登录"
             android:textColor="@color/red" />
