--- a/app/src/main/res/layout/activity_answer_select.xml
+++ b/app/src/main/res/layout/activity_answer_select.xml
@@ -11,7 +11,7 @@
         android:id="@+id/challenge_title"
         android:layout_width="106dp"
         android:layout_height="46dp"
-        android:layout_gravity="center_horizontal"
+        android:layout_gravity="right"
         android:layout_marginTop="20dp"
         android:gravity="center"
         android:textSize="24sp"
@@ -22,40 +22,49 @@
         android:layout_width="300dp"
         android:layout_height="150dp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="5dp"
         android:gravity="center"
-        android:textSize="18sp"
+        android:textColor="@color/black"
+        android:textSize="20sp"
         android:textStyle="bold" />
 
     <RadioGroup
         android:id="@+id/answerGroup"
         android:layout_width="350dp"
-        android:layout_height="160dp"
+        android:layout_height="wrap_content"
         android:layout_marginVertical="20dp">
 
         <RadioButton
             android:id="@+id/answerA"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:text="AnswerA" />
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="5dp"
+            android:text="AnswerA"
+            android:textSize="16sp" />
 
         <RadioButton
             android:id="@+id/answerB"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:text="AnswerB" />
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="5dp"
+            android:text="AnswerB"
+            android:textSize="16sp" />
 
         <RadioButton
             android:id="@+id/answerC"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:text="AnswerC" />
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="5dp"
+            android:text="AnswerC"
+            android:textSize="16sp" />
 
         <RadioButton
             android:id="@+id/answerD"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:text="AnswerD" />
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="5dp"
+            android:text="AnswerD"
+            android:textSize="16sp" />
 
 
     </RadioGroup>
@@ -64,10 +73,7 @@
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/answerGroup">
+      >
 
         <Button
             android:id="@+id/challenge_next"
