又修改了一些

--- a/app/src/main/res/layout/register.xml
+++ b/app/src/main/res/layout/register.xml
@@ -33,14 +33,14 @@
             android:id="@+id/register_userNameLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/forget_inputUserName"
+            android:layout_alignStart="@+id/register_inputUserName"
             android:layout_marginTop="30dp"
             android:text="用户名"
             android:textColor="#3f3f3f"
             android:textSize="12sp" />
 
         <EditText
-            android:id="@+id/forget_inputUserName"
+            android:id="@+id/register_inputUserName"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:layout_below="@+id/register_userNameLabel"
@@ -55,15 +55,15 @@
             android:id="@+id/register_pwdLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/forget_inputUserName"
-            android:layout_alignStart="@+id/forget_inputUserName"
+            android:layout_below="@+id/register_inputUserName"
+            android:layout_alignStart="@+id/register_inputUserName"
             android:layout_marginTop="15dp"
             android:text="密码"
             android:textColor="#3f3f3f"
             android:textSize="12sp" />
 
         <EditText
-            android:id="@+id/forget_inputPwd"
+            android:id="@+id/register_inputPwd"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:layout_below="@+id/register_pwdLabel"
@@ -79,15 +79,15 @@
             android:id="@+id/register_pwdRepeatLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/forget_inputPwd"
-            android:layout_alignStart="@+id/forget_inputUserName"
+            android:layout_below="@+id/register_inputPwd"
+            android:layout_alignStart="@+id/register_inputUserName"
             android:layout_marginTop="15dp"
             android:text="重复输入密码"
             android:textColor="#3f3f3f"
             android:textSize="12sp" />
 
         <EditText
-            android:id="@+id/forget_verNum"
+            android:id="@+id/register_inputPwdRepeat"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:layout_below="@+id/register_pwdRepeatLabel"
@@ -103,8 +103,8 @@
             android:id="@+id/register_emailLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/forget_verNum"
-            android:layout_alignStart="@+id/forget_inputUserName"
+            android:layout_below="@+id/register_inputPwdRepeat"
+            android:layout_alignStart="@+id/register_inputUserName"
             android:layout_marginTop="15dp"
             android:text="邮箱"
             android:textColor="#3f3f3f"
@@ -128,7 +128,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/register_inputEmail"
-            android:layout_alignStart="@+id/forget_inputUserName"
+            android:layout_alignStart="@+id/register_inputUserName"
             android:layout_marginTop="15dp"
             android:text="手机号"
             android:textColor="#3f3f3f"
