--- a/app/src/main/res/layout/activity_modify_pwd.xml
+++ b/app/src/main/res/layout/activity_modify_pwd.xml
@@ -1,115 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".RegisterActivity">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <EditText
+            android:id="@+id/modify_inputOldPwd"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="30dp"
+            android:drawableStart="@mipmap/pwd"
+            android:drawablePadding="10dp"
+            android:ems="14"
+            android:hint="原密码"
+            android:inputType="textPassword"
+            android:maxLines="1" />
+
+        <EditText
+            android:id="@+id/modify_inputNewPwd"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_below="@+id/modify_inputOldPwd"
+            android:layout_alignStart="@+id/modify_inputOldPwd"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="15dp"
+            android:drawableStart="@mipmap/pwd"
+            android:drawablePadding="10dp"
+            android:ems="14"
+            android:hint="新密码"
+            android:inputType="textPassword"
+            android:maxLines="1" />
+
+
+        <EditText
+            android:id="@+id/modify_inputPwdRepeat"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_below="@+id/modify_inputNewPwd"
+            android:layout_alignStart="@+id/modify_inputOldPwd"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="15dp"
+            android:drawableStart="@mipmap/pwd"
+            android:drawablePadding="10dp"
+            android:ems="14"
+            android:hint="重复输入"
+            android:inputType="textPassword"
+            android:maxLines="1" />
+
+    </RelativeLayout>
+
+
     <LinearLayout
-        android:id="@+id/linearLayout3"
-        android:layout_width="320dp"
-        android:layout_height="300dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginBottom="313dp"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.6"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="40dp"
+        android:gravity="center_horizontal">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:orientation="horizontal">
+        <Button
+            android:id="@+id/modify_returnBtn"
+            android:layout_width="100dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginHorizontal="10dp"
+            android:background="@drawable/button_style"
+            android:gravity="center"
+            android:text="返回"
+            android:textColor="#FFF" />
 
-            <TextView
-                android:id="@+id/old_pwdText"
-                android:layout_width="40dp"
-                android:layout_height="50dp"
-                android:layout_weight="1"
-                android:text="旧密码"
-                android:textAlignment="textEnd"
-                android:textSize="14sp"
-                android:textStyle="bold" />
-
-            <EditText
-                android:id="@+id/old_pwd"
-                android:layout_width="wrap_content"
-                android:layout_height="100dp"
-                android:layout_weight="1"
-                android:ems="10"
-                android:hint="请输入你原来的密码"
-                android:inputType="textPassword"
-                android:textSize="14sp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/new_pwdText"
-                android:layout_width="40dp"
-                android:layout_height="50dp"
-                android:layout_weight="1"
-                android:text="新密码"
-                android:textAlignment="textEnd"
-                android:textSize="14sp"
-                android:textStyle="bold" />
-
-            <EditText
-                android:id="@+id/new_pwd"
-                android:layout_width="wrap_content"
-                android:layout_height="100dp"
-                android:layout_weight="1"
-                android:ems="10"
-                android:hint="请输入你的新密码"
-                android:inputType="textPassword"
-                android:textSize="14sp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/confirm_pwdText"
-                android:layout_width="40dp"
-                android:layout_height="50dp"
-                android:layout_weight="1"
-                android:text="新密码"
-                android:textAlignment="textEnd"
-                android:textSize="14sp"
-                android:textStyle="bold" />
-
-            <EditText
-                android:id="@+id/confirm_pwd"
-                android:layout_width="wrap_content"
-                android:layout_height="100dp"
-                android:layout_weight="1"
-                android:ems="10"
-                android:hint="请再次输入你的新密码"
-                android:inputType="textPassword"
-                android:textSize="14sp" />
-        </LinearLayout>
-
+        <Button
+            android:id="@+id/modify_confirmBtn"
+            android:layout_width="100dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginHorizontal="10dp"
+            android:background="@drawable/button_style"
+            android:gravity="center"
+            android:text="确认修改"
+            android:textColor="#FFF" />
     </LinearLayout>
 
-    <Button
-        android:id="@+id/modify_modifyBtn"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="44dp"
-        android:text="确认修改"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.536"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
