--- a/app/src/main/res/layout/fragment_challenge.xml
+++ b/app/src/main/res/layout/fragment_challenge.xml
@@ -9,10 +9,10 @@
 
     <TextView
         android:id="@+id/lable"
-        android:layout_width="250dp"
-        android:layout_height="60dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:gravity="center"
+        android:layout_marginTop="20dp"
         android:text="请选择练习的内容"
         android:textColor="@color/colorPrimary"
         android:textSize="24sp"
