--- a/app/src/main/res/layout/activity_input_question.xml
+++ b/app/src/main/res/layout/activity_input_question.xml
@@ -69,8 +69,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:orientation="horizontal"
-        android:gravity="center_horizontal">
+        android:gravity="center_horizontal"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/tv_inputquestion_choiceb"
@@ -93,8 +93,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:orientation="horizontal"
-        android:gravity="center_horizontal">
+        android:gravity="center_horizontal"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/tv_inputquestion_choicec"
@@ -117,8 +117,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:orientation="horizontal"
-        android:gravity="center_horizontal">
+        android:gravity="center_horizontal"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/tv_inputquestion_choiced"
@@ -126,8 +126,7 @@
             android:layout_height="wrap_content"
 
             android:text="选项D："
-            android:textColor="@color/black"
-            />
+            android:textColor="@color/black" />
 
         <EditText
             android:id="@+id/ev_inputquestion_choiced"
@@ -142,8 +141,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:orientation="horizontal"
-        android:gravity="center_horizontal">
+        android:gravity="center_horizontal"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/tv_inputquestion_correctAnswer"
@@ -165,8 +164,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:orientation="horizontal"
-        android:gravity="center_horizontal">
+        android:gravity="center_horizontal"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/tv_inputquestion_chapter"
@@ -190,12 +189,6 @@
         android:layout_height="50dp"
         android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/bt_inputquestion_check"
-            android:layout_width="30dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="确认" />
 
         <Button
             android:id="@+id/bt_inputquestion_cancel"
@@ -203,6 +196,13 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="取消" />
+
+        <Button
+            android:id="@+id/bt_inputquestion_check"
+            android:layout_width="30dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="确认" />
 
     </LinearLayout>
 </LinearLayout>
