--- a/app/src/main/res/layout/forget.xml
+++ b/app/src/main/res/layout/forget.xml
@@ -19,7 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:text="忘记密码页面"
+            android:text="找回密码"
             android:textColor="#3f3f3f"
             android:textSize="24sp" />
     </LinearLayout>
